--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: black;
+}
+
+#root {
+width: 80%;
+margin: auto;
+background-color: white;
+
+}
+.App {
+  padding: 10px;
+  background-color: gray;
+  margin-top: 10px;
+}
+p {
+  margin: 0;
 }
