--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ margin: auto;
 background-color: white;
 
 }
-.App {
+.story-cards {
   padding: 10px;
   background-color: gray;
   margin-top: 10px;
