--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,13 @@ background-color: white;
   padding: 10px;
   background-color: gray;
   margin-top: 10px;
+  list-style: none;
+}
+ul{
+  padding: 0;
+}
+#banner a{
+  margin: 10px;
 }
 p {
   margin: 0;
